src/DatePicker/datepicker.scss
.select-wrap {
  position: relative;
  top: 20%;
  height: 60%;
  text-align: center;
  overflow: hidden;
  font-size: 20px;
  color: #ddd;
  background-color: white;

  &:before, &:after {
    position: absolute;
    z-index: 1;
    display: block;
    content: '';
    width: 100%;
    height: 50%;
  }
  &:before {
    top: 0;
  }
  &:after {
    bottom: 0;
  }

  .select-options {
    position: absolute;
    top: 50%;
    left: 0;
    width: 100%;
    height: 0;
    transform-style: preserve-3d;
    margin: 0 auto;
    display: block;
    transform: translateZ(-150px) rotateX(0deg);
    -webkit-font-smoothing: subpixel-antialiased;
    color: #666;
    .select-option {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 50px;

      -webkit-font-smoothing: subpixel-antialiased;
      @for $i from 1 through 100 {
        &:nth-child(#{$i}) {
          transform: rotateX(-18deg * ($i - 1)) translateZ(150px);
        }
      }
    }
  }
}

.selector {
  position: absolute;
  background-color: transparent;
  border: 1px solid #001489;
  box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
  border-radius: 8px;
  height: 40px;
  width: 87%;
  right: 7px;
  display: inline;
  top: 50%;
  transform: translate(0, -50%);
  z-index: 1;
  pointer-events: none;
}

.highlight {
  position: relative;
  top: 50%;
  transform: translate(0, -50%);
  background-color: white;
  color: black;
  font-weight: bold;
  overflow: hidden;
}

.highlight-list {
  position: absolute;
  width: 100%;
  list-style-type: none;
  top: -140%;
}

.date-selector-container {
  position: absolute;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: column;
  background-color: white;
  bottom: 0px;
  >div {
    flex: 1;
  }
}

.date-selector {
  position: relative;
  display: flex;
  margin: 0;
  padding: 10px;
  margin-right: 20px;
  width: 100%;
  right: 10px;
  align-self: center;
  >div {
    flex: 1;
  }

  .select-wrap {
    font-size: 16px;
  }
  .highlight {
    font-size: 16px;
  }
}

@media all and (min-width: 300px) and (max-width: 400px) {
  .date-selector {
    .select-wrap {
      font-size: 14px;
    }
    .highlight {
      font-size: 14px;
    }
  }
};

@media all and (min-width: 600px) {
  .date-selector {
    width: 50%;
  }
  .selector {
    width: 92%;
  }
  .highlight-list {
    top: -75px;
  }
};

